add recipy to calendar: no cost info modal and icon

--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -89,7 +89,7 @@
                       </ng-container>
                     </div>
                     <app-cost-of-recipy [ingredients]="recipy.ingrediends"
-                      [isFullscreenModal]="true"></app-cost-of-recipy>
+                      [isFullscreenModal]="true" [isCostDetails]="false"></app-cost-of-recipy>
                   </div>
                 </div>
                 <div class="recipy-photo" *ngIf="recipy.photo">
