--- a/src/app/shared/components/cost-of-recipy/cost-of-recipy.component.html
+++ b/src/app/shared/components/cost-of-recipy/cost-of-recipy.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="recipyCostInfo$ | async">
     <div *ngIf="recipyInfo" class="info-line">
-        <p><ion-icon name="wallet-outline" size="small" color="primary"></ion-icon> {{Math.round(recipyInfo.totalCost * 100) / 100}} грн <span *ngIf="isPerHundredGrams">/100гр</span></p>
-        <ng-container *ngIf="recipyInfo.warnings.length">
+        <p><ion-icon name="wallet-outline" size="small" [color]="recipyInfo.notReliable? 'warning' : 'primary'"></ion-icon> {{Math.round(recipyInfo.totalCost * 100) / 100}} грн <span *ngIf="isPerHundredGrams">/100гр</span></p>
+        <ng-container *ngIf="recipyInfo.warnings.length && isCostDetails">
             <ion-button fill="clear" size="small" slot="icon-only" [id]="'warnings-details'+id">
                 <ion-icon name="alert-circle-outline"
                     [color]="recipyInfo.notReliable? 'warning' : 'primary'"></ion-icon>
