--- a/src/app/shared/components/dialogs/select-option-dialog/select-option-dialog.component.html
+++ b/src/app/shared/components/dialogs/select-option-dialog/select-option-dialog.component.html
@@ -3,9 +3,11 @@
   <ng-template>
     <ion-header>
       <ion-toolbar>
-        <ion-title>{{date.toString() | date : "EE, MMM d"}}, {{mealtimeText.toLowerCase()}}</ion-title>
+        <ion-title>{{getDateText()}}, {{mealtimeText.toLowerCase()}}</ion-title>
         <ion-buttons slot="start">
-          <ion-button (click)="selectOption.dismiss({}, 'cancel')">Скасувати</ion-button>
+          <ion-button (click)="selectOption.dismiss({}, 'return')">
+            <ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon>
+          </ion-button>
         </ion-buttons>
         <ion-buttons slot="end">
           <ion-button (click)="
