--- a/src/app/pages/user/components/expenses-page/expenses-page.component.html
+++ b/src/app/pages/user/components/expenses-page/expenses-page.component.html
@@ -7,4 +7,5 @@
     <ion-item detail="true" (click)="goRecordExpenses()">Record expenses</ion-item>
     <ion-item detail="true" (click)="goReviewExpenses()">Expenses Overview</ion-item>
     <ion-item detail="true" (click)="goCheckPrice()">Перевірити ціну</ion-item>
+    <ion-item detail="true" (click)="goUpdateExpenses()">Оновити дані</ion-item>
 </ion-content>
