--- a/src/app/shared/components/recipy-full-view/recipy-full-view.component.html
+++ b/src/app/shared/components/recipy-full-view/recipy-full-view.component.html
@@ -6,7 +6,7 @@
   </ion-segment>
 
   <div class="scrollable">
-    <ng-container *ngIf="!(isLandscape$ | async)">
+    <ng-container *ngIf="!isBig">
       <ng-container *ngIf="currentTab === tabs[0].value">
         <app-ingredients-tab [recipy]="recipy" [portions]="portions" [amountPerPortion]="amountPerPortion"
           [ingredStartOptions]="ingredStartOptions" [day]="day"
@@ -26,7 +26,7 @@
         <app-info-tab [currentUser]="currentUser" [recipy]="recipy"></app-info-tab>
       </ng-container>
     </ng-container>
-    <div *ngIf="(isLandscape$ | async)" class="wide-screen-view">
+    <div *ngIf="isBig" class="wide-screen-view">
       <div class="scrollable wide-screen-view-products">
         <app-ingredients-tab [recipy]="recipy" [portions]="portions" [amountPerPortion]="amountPerPortion"
           [ingredStartOptions]="ingredStartOptions" [day]="day"
