--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -42,61 +42,70 @@
       </ng-container>
 
       <!-- page with recipies by collection -->
-      <ng-container *ngIf="collectionSelected$ | async">
+      <ng-container *ngIf="(collectionSelected$ | async) as selectedCollection">
 
-        <ion-list *ngIf="recipies$ | async">
-          <ng-container *ngFor="let recipy of recipies; let index = index">
-            <ion-item detail="false" button *ngIf="index < numberOfRecipiesToDisplay" (click)="onRecipyClicked(recipy)">
-              <ion-label class="recipy-content">
-                <div class="recipy-text" [class.limitedWidth]="!!recipy.photo">
-                  <h2 class="ion-text-wrap">{{ recipy.name }}</h2>
-                  <div class="recipy-details">
-                    <div>
+        <ion-list *ngIf="(recipies$ | async) as allRecipies">
+          <ng-container *ngFor="let recipy of allRecipies; let index = index">
+            <ion-item-sliding *ngIf="index < numberOfRecipiesToDisplay">
+              <ion-item detail="false" button (click)="onRecipyClicked(recipy)">
+                <ion-label class="recipy-content">
+                  <div class="recipy-text" [class.limitedWidth]="!!recipy.photo">
+                    <h2 class="ion-text-wrap">{{ recipy.name }}</h2>
+                    <div class="recipy-details">
+                      <div>
+                        <span>
+                          <ion-icon name="american-football-outline"></ion-icon>
+                          {{ activePreparationTime(recipy) | normalizeTime }}
+                        </span>
+                        <span>
+                          <ion-icon name="beer-outline"></ion-icon>
+                          {{ passivePreparationTime(recipy) | normalizeTime }}
+                        </span>
+                      </div>
                       <span>
-                        <ion-icon name="american-football-outline"></ion-icon>
-                        {{ activePreparationTime(recipy) | normalizeTime }}
+                        <ion-icon name="alarm" *ngIf="isNeedsAdvancePreparation(recipy)"></ion-icon>
+                        <ion-icon name="checkmark-done" *ngIf="recipy.isCheckedAndApproved"></ion-icon>
                       </span>
-                      <span>
-                        <ion-icon name="beer-outline"></ion-icon>
-                        {{ passivePreparationTime(recipy) | normalizeTime }}
-                      </span>
-                    </div>
-                    <span>
-                      <ion-icon name="alarm" *ngIf="isNeedsAdvancePreparation(recipy)"></ion-icon>
-                      <ion-icon name="checkmark-done" *ngIf="recipy.isCheckedAndApproved"></ion-icon>
-                    </span>
 
-                    <span *ngIf="recipy.calorificValue">{{ Math.round(recipy.calorificValue) }} ккал в 100гр.</span>
-                    <div *ngIf="recipy.portionSize"><ion-icon name="sparkles-outline"></ion-icon>
-                      {{recipy.portionSize}}гр./порцію</div>
-                    <div *ngIf="recipy.lastPrepared"><ion-icon name="today-outline"></ion-icon> {{recipy.lastPrepared |
-                      lastPreparedDate }}
-                    </div>
-                    <div class="collection-tags">
-                      <span><ion-icon name="pricetags-outline"></ion-icon> </span>
-                      <ion-chip class="collection-chip" *ngFor="let tag of recipy.type">{{
-                        DishType[tag]
-                        }}</ion-chip>
-                    </div>
-                    <div class="chip-selection-list">
-                      <ng-container *ngIf="productChips?.length">
-                        <ng-container *ngFor="let item of productChips">
-                          <ion-chip *ngIf="getIsInRecipy(item.productId, recipy)" class="collection-chip"
-                            [color]="item.color">
-                            {{item.name}}: {{getProductText(item.productId)}}
-                          </ion-chip>
+                      <span *ngIf="recipy.calorificValue">{{ Math.round(recipy.calorificValue) }} ккал в 100гр.</span>
+                      <div *ngIf="recipy.portionSize"><ion-icon name="sparkles-outline"></ion-icon>
+                        {{recipy.portionSize}}гр./порцію</div>
+                      <div *ngIf="recipy.lastPrepared"><ion-icon name="today-outline"></ion-icon> {{recipy.lastPrepared
+                        |
+                        lastPreparedDate }}
+                      </div>
+                      <div class="collection-tags">
+                        <span><ion-icon name="pricetags-outline"></ion-icon> </span>
+                        <ion-chip class="collection-chip" *ngFor="let tag of recipy.type">{{
+                          DishType[tag]
+                          }}</ion-chip>
+                      </div>
+                      <div class="chip-selection-list">
+                        <ng-container *ngIf="productChips?.length">
+                          <ng-container *ngFor="let item of productChips">
+                            <ion-chip *ngIf="getIsInRecipy(item.productId, recipy)" class="collection-chip"
+                              [color]="item.color">
+                              {{item.name}}: {{getProductText(item.productId)}}
+                            </ion-chip>
+                          </ng-container>
                         </ng-container>
-                      </ng-container>
+                      </div>
+                      <app-cost-of-recipy [ingredients]="recipy.ingrediends" [isFullscreenModal]="true"
+                        [isCostDetails]="false"></app-cost-of-recipy>
                     </div>
-                    <app-cost-of-recipy [ingredients]="recipy.ingrediends"
-                      [isFullscreenModal]="true" [isCostDetails]="false"></app-cost-of-recipy>
                   </div>
-                </div>
-                <div class="recipy-photo" *ngIf="recipy.photo">
-                  <app-image [imagePath]="recipy.photo"></app-image>
-                </div>
-              </ion-label>
-            </ion-item>
+                  <div class="recipy-photo" *ngIf="recipy.photo">
+                    <app-image [imagePath]="recipy.photo"></app-image>
+                  </div>
+                </ion-label>
+              </ion-item>
+              <ion-item-options>
+                <ion-item-option *ngIf="currentUser && selectedCollection.name !== 'all'">
+                    <app-collections-action-sheet [recipy]="recipy" [currentUser]="currentUser"></app-collections-action-sheet>
+                </ion-item-option>
+              </ion-item-options>
+            </ion-item-sliding>
+
           </ng-container>
 
           <ion-infinite-scroll *ngIf="numberOfRecipiesToDisplay <= recipies.length"
