--- a/src/global.scss
+++ b/src/global.scss
@@ -131,3 +131,7 @@ ion-item-sliding ion-item-option div {
   align-items: center;
   justify-content: space-evenly;
 }
+
+.color-warning {
+  color: var(--ion-color-warning);
+}
