--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.scss
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.scss
@@ -5,15 +5,22 @@
   font-size: 12px;
   color: var(--ion-color-medium);
   gap: 4px;
+
+  &>div {
+    display: flex;
+    gap: 5px;
+  }
 }
 
 .selection-info {
   display: flex;
   flex-direction: column;
+
   h6 {
     margin-block: 5px;
   }
-  @media (min-width: 590px){
+
+  @media (min-width: 590px) {
     gap: 20px;
     flex-direction: row;
   }
