--- a/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
+++ b/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
@@ -8,3 +8,12 @@
     color: white;   
 }
 
+.tags-to-show ion-chip {
+    background-color: green; 
+    color: white; 
+}
+
+.tags-to-hide ion-chip {
+    background-color: rgb(231, 66, 66);    
+    color: white;
+}
