fixed: search input is cleared when filters closed, though value is preserved

--- a/src/app/filters/components/search-recipies-filter/search-recipies-filter.component.html
+++ b/src/app/filters/components/search-recipies-filter/search-recipies-filter.component.html
@@ -2,6 +2,7 @@
 class="searchbar"
   placeholder="Пошук за назвою"
   show-clear-button="always"
+  [value]="value"
   [debounce]="500"
   (ionInput)="onSearch($event)"
   (ionClear)="clear()"
