--- a/src/app/calendar/calendar-smart-wrapper/calendar.component.html
+++ b/src/app/calendar/calendar-smart-wrapper/calendar.component.html
@@ -1,3 +1,1 @@
-<p *ngIf="currentDateDetails$ | async">
-  calendar works!
-</p>
+<app-calendar-timeline-day [recipies]="currentDateDetails$ | async"></app-calendar-timeline-day>
