--- a/src/app/calendar/calendar-smart-wrapper/calendar.component.scss
+++ b/src/app/calendar/calendar-smart-wrapper/calendar.component.scss
@@ -1,5 +1,17 @@
 :host {
     width: 100%;
     display: flex;
+    flex-direction: column;
     height: 100%;
+    position: relative;
+}
+
+.current-day-selector {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    position: sticky;
+    top: 0;
+    background: var(--ion-color-tertiary);
+    z-index: 100;
 }
