recipy preview actions layout

--- a/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
+++ b/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
@@ -23,7 +23,7 @@
           </div>
           <ion-popover class="recipy-preview" [trigger]="recipy.id + '_' + recipy.endTime" triggerAction="click">
             <ng-template>
-              <ion-content class="ion-padding">
+              <ion-content>
                 <app-recipy-preview [recipy]="recipy"></app-recipy-preview></ion-content>
             </ng-template>
           </ion-popover>
