view recipy from calendar

--- a/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
+++ b/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
@@ -21,10 +21,10 @@
             {{recipy.name}}
 
           </div>
-          <ion-popover class="recipy-preview" [trigger]="recipy.id + '_' + recipy.endTime" triggerAction="click">
+          <ion-popover #popover class="recipy-preview" [trigger]="recipy.id + '_' + recipy.endTime" triggerAction="click">
             <ng-template>
               <ion-content>
-                <app-recipy-preview [recipy]="recipy"></app-recipy-preview></ion-content>
+                <app-recipy-preview [recipy]="recipy" (closePopover)="popover.dismiss()"></app-recipy-preview></ion-content>
             </ng-template>
           </ion-popover>
         </ng-container>
