--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -5,5 +5,5 @@
 </app-header>
 
 <ion-content>
-  <app-calendar-core [addRecipies]="isPlannerMode" (currentTabChanged)="currentTab = $event"></app-calendar-core>
+  <app-calendar-wrapper></app-calendar-wrapper>
 </ion-content>
