--- a/src/app/pages/calendar/pages/view-recipies/view-recipies.component.html
+++ b/src/app/pages/calendar/pages/view-recipies/view-recipies.component.html
@@ -2,8 +2,8 @@
   <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
   <ion-segment [value]="displayRecipyIndex" title [scrollable]="true" (ionChange)="onSelectedRecipyChanged($event)">
     <ng-container *ngFor="let recipy of (openedRecipies$ | async); index as i">
-      <ion-segment-button [value]="i">
-        <ion-label class="recipy-selector-btn">{{recipy.name}}</ion-label>
+      <ion-segment-button [value]="i"  class="recipy-selector-btn">
+        <ion-label class="recipy-selector-btn-label">{{recipy.name}}</ion-label>
       </ion-segment-button>
     </ng-container>
   </ion-segment>
