add recipy to calendar modal, recipy selection tab

--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -1,7 +1,7 @@
 <app-header>
-  <span title>Заплановані рецепти</span>
-  <ion-button right-button (click)="togglePlannerMode()"><ion-icon slot="icon-only"
-      name="construct-outline"></ion-icon></ion-button>
+  <div right-button>
+    <app-add-recipy-to-calendar-modal></app-add-recipy-to-calendar-modal>
+  </div>
 </app-header>
 
 <ion-content>
